# dyconfir-2dsd-python

./: pyproject.toml
.github/workflows/: python-package.yml
dynconfir_2dsd_py/: README.md  pyproject.toml
dynconfir_2dsd_py/src/dynconfir_2dsd/: __init__.py  simulator.py
dynconfir_2dsd_py/tests/: test_smoke.py
