[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dyconfir-2dsd-python"
version = "0.1.0"
description = "Python implementation of the dynConfiR 2DSD simulator"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Jun Seo Hwang" }
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
]

[project.optional-dependencies]
test = [
  "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
